DevOps/force-app/main/default/objects/Session__c/fields/Housing_Services_Referral_Arranged__c.field-meta.xml
<CustomField>
    <fullName>Housing_Services_Referral_Arranged__c</fullName>
    <label>Housing Services: Referral Arranged</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeteorServiceAndAssitanceHousingOptions</valueSetName>
    </valueSet>
</CustomField>