DevOps/force-app/main/default/objects/Session__c/fields/Interpreter_Present__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interpreter Present?</label>
    <type>Checkbox</type>
</CustomField>