DevOps/force-app/main/default/objects/Session__c/fields/Is_Session_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Session_Owner_Active__c</fullName>
    <description>This field is used in reports to filter out sessions where the employee no longer works at Social Futures</description>
    <formula>Owner:User.IsActive</formula>
    <inlineHelpText>This field is used in reports to filter out sessions where the employee no longer works at Social Futures</inlineHelpText>
    <label>Is Session Owner Active?</label>
    <type>Checkbox</type>
</CustomField>