DevOps/force-app/main/default/objects/Session__c/fields/Lack_of_commitment_to_contain_dog__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_commitment_to_contain_dog__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was there a lack of commitment to containing dogs or having them on a leash prior to the visit?</inlineHelpText>
    <label>Lack of commitment to contain dog</label>
    <type>Checkbox</type>
</CustomField>