DevOps/force-app/main/default/objects/Session__c/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeaderOfSessions</relationshipName>
    <type>Lookup</type>
</CustomField>