DevOps/force-app/main/default/objects/Session__c/fields/Legacy_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Activity_Id__c</fullName>
    <label>Legacy Activity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>