DevOps/force-app/main/default/objects/Session__c/fields/Mitigation_Strategies_notes__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Strategies_notes__c</fullName>
    <label>Mitigation Strategies notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>