DevOps/force-app/main/default/objects/Session__c/fields/Mobile_reception_issues__c.field-meta.xml
<CustomField>
    <fullName>Mobile_reception_issues__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there no mobile or unreliable mobile reception?</inlineHelpText>
    <label>Mobile reception issues</label>
    <type>Checkbox</type>
</CustomField>