DevOps/force-app/main/default/objects/Session__c/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <description>CC - Service Contact - Modality</description>
    <inlineHelpText>CC - Service Contact - Modality</inlineHelpText>
    <label>Modality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No contact took place</label>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Face to Face</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Telephone</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Video</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Internet-based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>