DevOps/force-app/main/default/objects/Session__c/fields/Money_Business_Community_Education__c.field-meta.xml
<CustomField>
    <fullName>Money_Business_Community_Education__c</fullName>
    <label>Money Business Community Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexMoneyBusinessCommunityEducation</valueSetName>
    </valueSet>
</CustomField>