DevOps/force-app/main/default/objects/Session__c/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <description>CC - Service Contact - No Show</description>
    <inlineHelpText>CC - Service Contact - No Show</inlineHelpText>
    <label>No Show</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>