DevOps/force-app/main/default/objects/Session__c/fields/Non_Compliant_Medication__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliant_Medication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the client non-compliant with their medication?</description>
    <inlineHelpText>Is the client non-compliant with their medication?</inlineHelpText>
    <label>Non-Compliant Medication</label>
    <type>Checkbox</type>
</CustomField>