DevOps/force-app/main/default/objects/Session__c/fields/Non_Social_Futures_Location__c.field-meta.xml
<CustomField>
    <fullName>Non_Social_Futures_Location__c</fullName>
    <inlineHelpText>If session not held at a Social Futures site, please detail the location where session took place</inlineHelpText>
    <label>Non-Social Futures Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>