DevOps/force-app/main/default/objects/Session__c/fields/Other_People_at_Home__c.field-meta.xml
<CustomField>
    <fullName>Other_People_at_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will other people be in the home during the home visit? (only client and their immediate family member(s) and/or identified support person can be in the home when you visit).</description>
    <label>Other People at Home?</label>
    <type>Checkbox</type>
</CustomField>