DevOps/force-app/main/default/objects/Session__c/fields/Other_significant_issues__c.field-meta.xml
<CustomField>
    <fullName>Other_significant_issues__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are other significant issues reported or known?</description>
    <inlineHelpText>Are other significant issues reported or known?</inlineHelpText>
    <label>Other significant issues</label>
    <type>Checkbox</type>
</CustomField>