DevOps/force-app/main/default/objects/Session__c/fields/Outcome_Star_Reading__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Star_Reading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcomes Star Reading</label>
    <referenceTo>Outcome_Star_Reading__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>