DevOps/force-app/main/default/objects/Session__c/fields/Owner_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Owner_Fullname__c</fullName>
    <formula>Owner:User.FullName__c</formula>
    <label>Owner Fullname</label>
    <type>Text</type>
</CustomField>