DevOps/force-app/main/default/objects/Session__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <description>CC - Service Contact - Participants</description>
    <inlineHelpText>CC - Service Contact - Participants</inlineHelpText>
    <label>Participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Individual client</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Client group</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Family / Client Support Network</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Other health professional or service provider</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Not stated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>