DevOps/force-app/main/default/objects/Session__c/fields/Pathfinders_Site__c.field-meta.xml
<CustomField>
    <fullName>Pathfinders_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pathfinders Site</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Sessions (Pathfinders Site)</relationshipLabel>
    <relationshipName>PathfinderSessions</relationshipName>
    <type>Lookup</type>
</CustomField>