DevOps/force-app/main/default/objects/Session__c/fields/PHN_Episode_Commenced_Date__c.field-meta.xml
<CustomField>
    <fullName>PHN_Episode_Commenced_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VC &amp; CCHM - Shows which session set the PHN Episode Commenced Date</description>
    <inlineHelpText>Shows which session set the PHN Episode Commenced Date</inlineHelpText>
    <label>PHN Episode Commenced Date</label>
    <type>Checkbox</type>
</CustomField>