DevOps/force-app/main/default/objects/Session__c/fields/PHN_Interpreter__c.field-meta.xml
<CustomField>
    <fullName>PHN_Interpreter__c</fullName>
    <formula>IF(Interpreter_Present__c = TRUE, &quot;1&quot;, &quot;2&quot;)</formula>
    <label>PHN Interpreter</label>
    <type>Text</type>
</CustomField>