DevOps/force-app/main/default/objects/Session__c/fields/PHN_KPI_Suicide_Referral_Flag_Session__c.field-meta.xml
<CustomField>
    <fullName>PHN_KPI_Suicide_Referral_Flag_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will store the first session that matches the criteria for counting the contact attempt for a case that is a suicide referral for PMHC reporters.</description>
    <label>PHN KPI Suicide Referral Flag Session</label>
    <type>Checkbox</type>
</CustomField>