DevOps/force-app/main/default/objects/Session__c/fields/PHN_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>PHN_Session_Date__c</fullName>
    <description>PHN - Converts Session date to the format DDMMYYYY for PHN uploads.</description>
    <formula>IF(LEN(TEXT(DAY(Session_Date__c))) &lt; 2,&apos;0&apos; + TEXT(DAY(Session_Date__c)), TEXT(DAY(Session_Date__c))) + IF(LEN(TEXT(MONTH(Session_Date__c))) &lt; 2,&apos;0&apos; + TEXT(MONTH(Session_Date__c)), TEXT(MONTH(Session_Date__c))) + TEXT(YEAR(Session_Date__c))</formula>
    <label>PHN Session Date</label>
    <type>Text</type>
</CustomField>