DevOps/force-app/main/default/objects/Session__c/fields/PHN_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>PHN_Start_Time__c</fullName>
    <description>PHN Start Time formula for extract</description>
    <formula>IF(MONTH(TODAY()) &gt; 10 || MONTH(TODAY()) &lt; 4, TEXT(HOUR(TIMEVALUE(Start_Date_Time__c + (11/24)))) + &quot;:&quot; + IF(LEN(TEXT(MINUTE(TIMEVALUE(Start_Date_Time__c + (11/24)))))&lt;2,&apos;0&apos;+TEXT(MINUTE(TIMEVALUE(Start_Date_Time__c + (11/24)))),TEXT(MINUTE(TIMEVALUE(Start_Date_Time__c + (11/24))))), TEXT(HOUR(TIMEVALUE(Start_Date_Time__c + (10/24)))) + &quot;:&quot; + IF(LEN(TEXT(MINUTE(TIMEVALUE(Start_Date_Time__c + (11/24)))))&lt;2,&apos;0&apos;+TEXT(MINUTE(TIMEVALUE(Start_Date_Time__c + (11/24)))),TEXT(MINUTE(TIMEVALUE(Start_Date_Time__c + (11/24))))))</formula>
    <inlineHelpText>PHN Start Time formula for extract</inlineHelpText>
    <label>PHN Start Time</label>
    <type>Text</type>
</CustomField>