DevOps/force-app/main/default/objects/Session__c/fields/Program_is_Dex_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Program_is_Dex_Reporter__c</fullName>
    <formula>Case__r.Program__r.DEX_Reporter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program is Dex Reporter</label>
    <type>Checkbox</type>
</CustomField>