DevOps/force-app/main/default/objects/Session__c/fields/Program_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Program_Type__c</fullName>
    <formula>IF(ISBLANK(TEXT(Case__r.Program__r.Program_Type__c) ),  TEXT(Program__r.Program_Type__c) ,TEXT(Case__r.Program__r.Program_Type__c))</formula>
    <label>Program Program Type</label>
    <type>Text</type>
</CustomField>