DevOps/force-app/main/default/objects/Session__c/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>