DevOps/force-app/main/default/objects/Session__c/fields/Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reason__c</fullName>
    <label>Referral Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGE</fullName>
                <label>Age-appropriate development</label>
            </value>
            <value>
                <fullName>COMMUNITY</fullName>
                <label>Community participation &amp; networks</label>
            </value>
            <value>
                <fullName>TRAINING</fullName>
                <label>Education and skills training</label>
            </value>
            <value>
                <fullName>FAMILY</fullName>
                <label>Family functioning</label>
            </value>
            <value>
                <fullName>MONEY</fullName>
                <label>Financial Resilience</label>
            </value>
            <value>
                <fullName>HOUSING</fullName>
                <label>Housing</label>
            </value>
            <value>
                <fullName>MATERIAL</fullName>
                <label>Material wellbeing and basic necessities</label>
            </value>
            <value>
                <fullName>MENTAL</fullName>
                <label>Mental health, wellbeing</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PERSONAL</fullName>
                <label>Personal and family safety</label>
            </value>
            <value>
                <fullName>PHYSICAL</fullName>
                <label>Physical health</label>
            </value>
            <value>
                <fullName>CARING</fullName>
                <label>Support to caring role</label>
            </value>
            <value>
                <fullName>EMPLOYMENT</fullName>
                <label>Employment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>