DevOps/force-app/main/default/objects/Session__c/fields/Safe_Space_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Safe_Space_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safe Space Assessment</label>
    <referenceTo>Safe_Space_Assessment__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>