DevOps/force-app/main/default/objects/Session__c/fields/Safe_Space_Assessment_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Safe_Space_Assessment_Approval_Status__c</fullName>
    <formula>CASE
(
  TEXT(Safe_Space_Assessment__r.Approval_Status__c),
  &apos;Unsubmitted&apos;, &apos;🔵 Unsubmitted&apos;,
  &apos;Submit For Approval&apos;, &apos;🟡 Submit For Approval&apos;,
  &apos;Awaiting Approval&apos;, &apos;🟠 Awaiting Approval&apos;,
  &apos;Approved&apos;, &apos;🟢 Approved&apos;,
  &apos;Rejected&apos;, &apos;🟣 Rejected&apos;,
  null
)</formula>
    <label>Safe Space Assessment Approval Status</label>
    <type>Text</type>
</CustomField>