DevOps/force-app/main/default/objects/Session__c/fields/Safe_Space_Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Safe_Space_Assessment_Outcome__c</fullName>
    <formula>CASE
(
  TEXT(Safe_Space_Assessment__r.Assessment_Outcome__c),
  &apos;High Risks Identified, Visit Cannot Proceed&apos;, &apos;🟣 High Risks Identified, Visit Cannot Proceed&apos;,
  &apos;Mitigate Risks or Cancel Outreach&apos;, &apos;🟠 Mitigate Risks or Cancel Outreach&apos;,
  &apos;Consider Implications of What is Unknown&apos;, &apos;🔵 Consider Implications of What is Unknown&apos;,
  &apos;Can Proceed (Pending Approval)&apos;, &apos;🟢 Can Proceed (Pending Approval)&apos;,
  null
)</formula>
    <label>Safe Space Assessment Outcome</label>
    <type>Text</type>
</CustomField>