DevOps/force-app/main/default/objects/Session__c/fields/Safe_Space_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Safe_Space_Assessment_Type__c</fullName>
    <formula>Safe_Space_Assessment__r.RecordType.Name</formula>
    <label>Safe Space Assessment Type</label>
    <type>Text</type>
</CustomField>