DevOps/force-app/main/default/objects/Session__c/fields/Safe_Space_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Safe_Space_Risk_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safe Space Risk Assessment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Safe Space Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Assessment__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>