DevOps/force-app/main/default/objects/Session__c/fields/Safe_Space_Visit__c.field-meta.xml
<CustomField>
    <fullName>Safe_Space_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe Space Visit</label>
    <type>Checkbox</type>
</CustomField>