DevOps/force-app/main/default/objects/Session__c/fields/Satisfaction_Score_Completed__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Score_Completed__c</fullName>
    <label>Satisfaction Score Completed</label>
    <summaryFilterItems>
        <field>Client_Session_Assessment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Satisfaction</value>
    </summaryFilterItems>
    <summaryForeignKey>Client_Session_Assessment__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>