DevOps/force-app/main/default/objects/Session__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DexServices</valueSetName>
    </valueSet>
</CustomField>