DevOps/force-app/main/default/objects/Session__c/fields/Service_Setting__c.field-meta.xml
<CustomField>
    <fullName>Service_Setting__c</fullName>
    <label>Service Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexServiceSetting</valueSetName>
    </valueSet>
</CustomField>