DevOps/force-app/main/default/objects/Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <formula>DATEVALUE( Start_Date_Time__c )</formula>
    <inlineHelpText>Based on the Start Date/Time</inlineHelpText>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>