DevOps/force-app/main/default/objects/Session__c/fields/Session_DEX_Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_DEX_Cutoff_Date__c</fullName>
    <formula>IF(
AND(MONTH(Session_Date__c) &gt;= 7, MONTH(Session_Date__c) &lt;= 12),
DATE(YEAR(Session_Date__c) + 1, 1, 31),
IF(
AND(MONTH(Session_Date__c) &gt;= 1, MONTH(Session_Date__c) &lt;= 6),
DATE(YEAR(Session_Date__c), 7, 31),
NULL
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session DEX Cutoff Date</label>
    <type>Date</type>
</CustomField>