DevOps/force-app/main/default/objects/Session__c/fields/Session_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Session_Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Id 18</label>
    <type>Text</type>
</CustomField>