DevOps/force-app/main/default/objects/Session__c/fields/Session_Month__c.field-meta.xml
<CustomField>
    <fullName>Session_Month__c</fullName>
    <description>Month the Session was held. (Used in Flows)</description>
    <formula>MONTH(Session_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Month the Session was held. (Used in Flows)</inlineHelpText>
    <label>Session Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>