DevOps/force-app/main/default/objects/Session__c/fields/Session_Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>Session_Participant_Count__c</fullName>
    <description>Number of Sessions Participants</description>
    <label>Session Participant Count</label>
    <summaryForeignKey>Session_Participant__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>