DevOps/force-app/main/default/objects/Session__c/fields/Session_Ref__c.field-meta.xml
<CustomField>
    <fullName>Session_Ref__c</fullName>
    <displayFormat>S-{000000}</displayFormat>
    <label>Session Ref</label>
    <type>AutoNumber</type>
</CustomField>