DevOps/force-app/main/default/objects/Session__c/fields/SessionPassed__c.field-meta.xml
<CustomField>
    <fullName>SessionPassed__c</fullName>
    <description>Determines whether a Sessions start time has passed or not.</description>
    <formula>Start_Date_Time__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines whether a Sessions start time has passed or not.</inlineHelpText>
    <label>SessionPassed</label>
    <type>Checkbox</type>
</CustomField>