DevOps/force-app/main/default/objects/Session__c/fields/SHS_Referral_Arranged__c.field-meta.xml
<CustomField>
    <fullName>SHS_Referral_Arranged__c</fullName>
    <formula>OR(
    NOT(ISBLANK(Family_Services_Referral_Arranged__c)),
    NOT(ISBLANK(General_Services_Referral_Arranged__c)),
    NOT(ISBLANK(Housing_Services_Referral_Arranged__c)),
    NOT(ISBLANK(Specialised_Services_Referral_Arranged__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SHS Referral Arranged</label>
    <type>Checkbox</type>
</CustomField>