DevOps/force-app/main/default/objects/Session__c/fields/Social_Futures_Site__c.field-meta.xml
<CustomField>
    <fullName>Social_Futures_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Futures Site</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>