DevOps/force-app/main/default/objects/Session__c/fields/Specialised_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Specialised_Services_Provided__c</fullName>
    <label>Specialised Services: Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeteorServiceAndAssitanceSpecialised</valueSetName>
    </valueSet>
</CustomField>